fix broken styles on feed

--- a/app/assets/stylesheets/feed.css
+++ b/app/assets/stylesheets/feed.css
@@ -23,7 +23,7 @@
   padding-right: 25px;
   padding-bottom: 25px;
   display: flex;
-  flex-direction: 'row';
+  flex-direction: row;
   justify-content: space-between;
 }
 
